testsuite/tests/dependent/should_fail/T14845_fail2.stderr

T14845_fail2.hs:15:14: error:
    • Data constructor ‘MkA’ cannot be used here
        (it has an unpromotable context ‘Coercible a Int’)
    • In the first argument of ‘SA’, namely ‘MkA’
      In the type ‘SA MkA’
      In the definition of data constructor ‘SMkA’
